# py_wholeofhome

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
hot_water/: hot_water.py
hot_water/reference_data/: hw_annual_energy_by_climate_zone_rev10.1.csv  hw_climate_zones_rev10.1.csv  hw_hourly_coefficients_rev10.1.csv
plug_loads/: plug_loads.py
plug_loads/reference_data/: plug_load_hourly_share_rev10.1.csv
src/py_wholeofhome/cooking/: __init__.py  cooking.py
src/py_wholeofhome/cooking/reference_data/: cooking_coefficients_rev10.1.csv  cooking_hourly_share_rev10.1.csv
src/py_wholeofhome/costs_emissions/: __init__.py  costs_emissions.py
src/py_wholeofhome/heating_cooling/: __init__.py  heating_cooling.py
src/py_wholeofhome/heating_cooling/reference_data/: nathers_and_gems_zones_rev10.1.csv
src/py_wholeofhome/hot_water/: __init__.py  hot_water.py
src/py_wholeofhome/hot_water/reference_data/: hw_heat_pump_climate_zones_rev10.1.csv  hw_hourly_profiles_rev10.1.csv  hw_monthly_share_rev10.1.csv
src/py_wholeofhome/lighting/: __init__.py  lighting.py
src/py_wholeofhome/lighting/reference_data/: lighting_hourly_share_rev10.1.csv
src/py_wholeofhome/plug_loads/: __init__.py  plug_loads.py
src/py_wholeofhome/utilities/: utilities.py
src/py_wholeofhome/utilities/reference_data/: NatHERSclimatezonesNov2019_0.csv
tests/: test_cooking.py  test_costs_emissions.py  test_heating_cooling.py  test_hot_water.py  test_plug_loads.py
utilities/: __init__.py  utilities.py
