[tool.poetry]
name = "py-wholeofhome"
version = "0.1.0"
description = ""
authors = ["David Perry <david@boompower.com.au>"]
readme = "README.md"
packages = [{include = "py_wholeofhome", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = ">=2.0.3,<3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
